# olympic-scrape

./: README.md  create_urls_table.py  extract_text.py  pyproject.toml  text.txt
data/: links.md  paris_pt_news_2024.csv  url_name_table.csv
data/text_extraction/: 13-jogador-do-volei-jogos-olimpicos-paris-2024-honorato.txt  30-anos-tetra-selecao-origens-jogos-84-88-futebol.txt  40-anos-carlos-lopes-rosa-mota-maratona.txt  40-anos-geracao-prata-volei-los-angeles-1984.txt  adriano-volei-perfil-paris-2024.txt  ahman-hellvig-evandro-arthur-volei-praia-jogos-olimpicos.txt  ahman-hellvig-ouro-no-volei-praia-masculino-jogos-olimpicos.txt  alan-fora-estreia-selecao-masculina-volei-jogos-olimpicos-paris-2024.txt  alan-souza-a-inspiracao-superacao-selecao-volei.txt  alcaraz-sinner-avancam-wimbledon-2024-brasil-duplas-mistas.txt  alemanha-franca-basquete-masculino-paris-2024.txt  alison-dos-santos-barreiras-firmeza-bom-humor.txt  alison-dos-santos-comemora-bronze-jogos-olimpicos-paris-2024.txt  alison-dos-santos-comparacao-tempos-retrospecto-warholm-benjamin.txt  alison-dos-santos-horario-assistir-monaco-diamond-league-2024.txt  alison-dos-santos-jogos-olimpicos-paris-2024-calendario-resultados-atletismo.txt  alison-dos-santos-jogos-olimpicos-paris-2024-onde-assistir-final400m-com-barreiras.txt  alison-dos-santos-paris-diamond-league-2024.txt  alison-dos-santos-vence-400m-barreiras-diamond-league-londres.txt  alison-santos-matheus-lima-400m-barreiras-paris-2024.txt  alison-santos-piu-bronze-400m-barreiras-jogos-olimpicos-paris-2024.txt  (+734 more)
src/: extract_urls.py
